2025.303:
  - Fix byte swapping in ms3_detect() for v3 records for big-endian systems.

2025.298: v3.1.10
  - Add MSF_SPLITISVERSION flag to control using the splitversion value as the
  version instead the record publication version for mstl3_addmsr() and variants.
  - Add missing functions to libmseed.def for Windows library exports.

2025.267: v3.1.9
  - Add mstl3_pack_ppupdate_flushidle() for packing idle streams in combination
  with the use of MSF_PPUPDATETIME during trace list additions.
  - Convert mstl3_addmsr() from a macro to a real (thin) function.

2025.257: v3.1.8
  - Fix segment removal from MS3TraceList when packing

2025.239:
  - Add mstl3_pack_segment()
  - Deprecate mstraceseg3_pack()
  - mstl3_addmsr()/mstl3_addmsr_recordptr(): Ensure segments represent time
  coverage before adding new samples.

2025.234: 3.1.7
  - Add ms_nstime2timestr_n() with string size limit, deprecate ms_nstime2timestr().
  - With ms_nstime2timestr_n() print "ERROR" for NSTERROR and "UNSET" for NSTUNSET.
  - Avoid fatal errors when v2 record blockettes contain invalid time stamps.
  When invalid SEED "btime" values are encountered they are now set to NSTERROR and
  serialized in extra headers as "ERROR".
  - Limit float point values in extra headers to single precision to avoid
  unrealistically high precision values in the output
  - Update yyjson to v0.12.0

2025.227:
  - Properly round negative values when converting floats to integers
  in mstl3_convertsamples().

2025.207: 3.1.6
  - Properly propagate sub-fractional microseconds to v2 blockette 1001
  when packing more than one record.
  - Round sub-fractional and sub-microsecond times for v2 record fields
  to retain accuracy.
  - Ensure microsecond offsets in v2 record fields are -50 to +49, which
  matches previous major library version behavior and SEED recommendation.
  - Add msr3_repack_mseed2() to repack v2 records efficiently.
  - Add -s and -R options to example/lm_pack.c.