@@ -1,5 +1,7 @@
 2025.303:
   - Fix byte swapping in ms3_detect() for v3 records for big-endian systems.
+  - Add MSF_SKIPADJACENTDUPLICATES to skip adjacent duplicate records while
+  populating a MS3TraceList.
 
 2025.298: v3.1.10
   - Add MSF_SPLITISVERSION flag to control using the splitversion value as the
